<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalmirko.textrepeaterdemo.MainActivity">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/input_et"
        android:ems="10"
        android:hint="@string/input_hint"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/number_et"
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_number"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/engage_btn"
        android:text="@string/engage_btn_text" />

    <EditText
        android:id="@+id/et_output"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_enable"
        android:ems="10"
        android:textSize="20sp"
        android:gravity="start"
        android:inputType="textMultiLine" />

</RelativeLayout>
